--- a/src/main/resources/templates/new-sequence.html
+++ b/src/main/resources/templates/new-sequence.html
@@ -2,7 +2,7 @@
 
 <html lang="sv" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Utskick</title>
+  <title>Ny sekvens</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -133,26 +133,32 @@
 <div class="container">
   <div class="d-flex">
     <div class="w-100">
-      <form th:action="@{/user/upload-sequence}" method="post">
+      <form th:action="'/user/skapa-sekvens/' + ${mailList.id}" method="post">
         <div class="px-lg-4 px-sm-3 px-2 py-lg-5 py-sm-4 py-5">
-          <div class="sequence" style="display: none">
-            <hr class="mt-3 mb-3" style="border: none;height: 3px;background-color: #5e5e5e;">
-            <label>Sekvens</label>
+          <div class="sequence">
+            <div class="mb-3 d-flex flex-wrap">
+              <label class="form-label me-3" for="variable">Tillgängliga variabler:</label>
+              <p id="variable" style="font-size: 0.875rem" class="me-2" th:each="header : ${headers}" th:text="'{' + ${header.name} + '}'"></p>
+            </div>
             <div class="row mb-3">
               <div class="col-xl-6">
-                <input name="title" oninput="mirrorTextSequence(this)" required class="w-100 form-control" type="text">
+                <label>Titel</label>
+                <input name="title" oninput="mirrorTextTitle(this)" required class="w-100 form-control" type="text">
               </div>
               <div class="col-xl-6">
-                <input readonly class="w-100 form-control" type="text">
+                <label>Mottagaren ser (exempelvärde från uppladdad fil)</label>
+                <input readonly id="titleToBeReplaced" class="w-100 form-control" type="text">
               </div>
             </div>
             <div class="row">
               <div class="col-xl-6">
-                <div oninput="mirrorTextSequence(this)" contenteditable="true" type="text/html; charset=utf-8" required class="w-100 form-control content" cols="30" rows="10"></div>
+                <label>Huvud innehåll</label>
+                <div oninput="mirrorTextContent(this)" contenteditable="true" type="text/html; charset=utf-8" required class="w-100 form-control content" cols="30" rows="10"></div>
               </div>
               <div class="col-xl-6">
-                <div class="w-100"></div>
-                <textarea name="content" style="display: none" cols="30" rows="10"></textarea>
+                <label></label>
+                <div class="w-100" id="contentToBeReplaced"></div>
+                <textarea name="content" id="contentToBeReplacedTextArea" style="display: none" cols="30" rows="10"></textarea>
               </div>
             </div>
             <div class="row">
@@ -198,62 +204,26 @@
   headers = JSON.parse("[" + headers + "]");
   firstRow = JSON.parse("[" + firstRow + "]");
 
-  function mirrorText(e){
+  function mirrorTextTitle(e){
     let text = e.value
-    let sibling = e.parentElement.nextElementSibling.firstElementChild.nextElementSibling
-    if(sibling.tagName == "DIV"){
-      text = e.innerHTML
+    for(let i = 0; i<headers.length;i++){
+      var pattern = "{" + headers[i].name + "}";
+      var regex = new RegExp(pattern, 'g');
+      text = text.replace(regex, firstRow[i].name);
     }
+    document.getElementById("titleToBeReplaced").value = text;
+  }
+  function mirrorTextContent(e){
+    let text = e.innerHTML
     let textBeforeReplaced = text
     for(let i = 0; i<headers.length;i++){
       var pattern = "{" + headers[i].name + "}";
       var regex = new RegExp(pattern, 'g');
       text = text.replace(regex, firstRow[i].name);
     }
-    if(sibling.tagName == "DIV"){
-      //let htmlText = text.replace(/\n/g, '<br>'); // Replace newline characters with <br> tags
-      sibling.innerHTML = text;
-      sibling.nextElementSibling.textContent = textBeforeReplaced;
-    }
-    else{
-      sibling.value = text;
-    }
+    document.getElementById("contentToBeReplaced").innerHTML = text;
+    document.getElementById("contentToBeReplacedTextArea").textContent = textBeforeReplaced;
   }
-  function mirrorTextSequence(e){
-    let text = e.value
-    let sibling = e.parentElement.nextElementSibling.firstElementChild
-    if(sibling.tagName == "DIV"){
-      text = e.innerHTML
-    }
-    let textBeforeReplaced = text
-    for(let i = 0; i<headers.length;i++){
-      var pattern = "{" + headers[i].name + "}";
-      var regex = new RegExp(pattern, 'g');
-      text = text.replace(regex, firstRow[i].name);
-    }
-    if(sibling.tagName == "DIV"){
-      //let htmlText = text.replace(/\n/g, '<br>'); // Replace newline characters with <br> tags
-      sibling.innerHTML = text;
-      sibling.nextElementSibling.textContent = textBeforeReplaced;
-    }
-    else{
-      sibling.value = text;
-    }
-  }
-  function removeSequence(e){
-    e.parentElement.parentElement.parentElement.remove();
-  }
-  const newSequence = document.getElementById('addSequence');
-  newSequence.addEventListener('click', function() {
-    if(document.getElementsByClassName("insertedSequence").length>0){
-      console.log("hasSequence")
-      $(".sequence:last").clone().insertAfter("div.insertedSequence:last").css({"display": ""}).addClass("insertedSequence");
-    }
-    else{
-      console.log("no sequence")
-      $(".sequence:last").clone().insertAfter("div.addSequenceDiv").css({"display": ""}).addClass("insertedSequence");
-    }
-  });
 
   document.getElementById('file').addEventListener('change', function(e) {
     var fileNameByInput = e.target.files[0].name;
